# NVIDIA___nvImageCodec

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report_form.yml
cmake/: Dependencies.cmake  Utils.cmake
cmake/template/: Config.cmake.in
conda/: build.sh
conda/recipes/libnvimgcodec/: bld.bat  build.sh  meta.yaml  run_test.bat
conda/recipes/libnvimgcodec/patches/: 0004-BLD-Disable-non-standard-CUDA-arch-checking.patch
conda/recipes/nvimgcodec/: bld.bat  build.sh  meta.yaml
conda/recipes/nvimgcodec/patches/: 0003-BLD-Make-find_package-OpenCV-verbose-and-required.patch
conda/scripts/: rewrite_meta_yaml.py
cpack/: debian_lib_postinst.in  debian_lib_postrm.in  ld.so.conf.in
docker/: Dockerfile.aarch64  Dockerfile.conda-test  Dockerfile.cuda129.aarch64.deps  Dockerfile.cuda129.amd64.vs17.deps  Dockerfile.cuda129.x86_64.deps  Dockerfile.cuda133.aarch64.deps  Dockerfile.cuda133.amd64.vs17.deps  Dockerfile.cuda133.x86_64.deps  Dockerfile.tegra-aarch64-linux.builder  Dockerfile.x86_64  build_dockers.bat  build_dockers.sh  build_helper.bat  build_helper.sh
example/: CMakeLists.txt
example/nvimproc/: CMakeLists.txt
example/nvimtrans/: CMakeLists.txt  main.cpp
example/python/: DICOM-pydicom.ipynb  advanced_multi_image.ipynb  cucim_sample.ipynb  nvimgcodec.ipynb  torch_dataloader.ipynb
example/python/tools/dicom/: README.md  nvdicom.py
extensions/libjpeg_turbo/: CMakeLists.txt  jpeg_mem.cpp  libjpeg_turbo_decoder.cpp
extensions/libtiff/: CMakeLists.txt  libtiff_decoder.cpp
extensions/nvbmp/: CMakeLists.txt  decoder.cpp  encoder.cpp
extensions/nvjpeg/: CMakeLists.txt  cuda_decoder.cpp  cuda_encoder.cpp  hw_decoder.cpp  hw_encoder.cpp  lossless_decoder.cpp  nvjpeg_utils.cpp  nvjpeg_utils.h
extensions/nvjpeg2k/: CMakeLists.txt  cuda_decoder.cpp  cuda_encoder.cpp
extensions/nvpnm/: CMakeLists.txt  encoder.cpp
extensions/nvtiff/: CMakeLists.txt  cuda_decoder.cpp  cuda_encoder.cpp  metadata_extractor.cpp  nvtiff_ext.cpp  nvtiff_utils.cpp  nvtiff_utils.h
extensions/opencv/: CMakeLists.txt  opencv_decoder.cpp  opencv_encoder.cpp  opencv_utils.cpp
extensions/utils/: library_version.h
include/: nvimgcodec.h
python/: CMakeLists.txt  code_stream.cpp  code_stream.h  code_stream_view.cpp  code_stream_view.h  decode_params.cpp  decode_params.h  decoder.cpp  decoder.h  device_utils.h  dlpack_utils.cpp  dlpack_utils.h  encode_params.cpp  encoder.cpp  encoder.h  error_handling.h  image.cpp  image.h  main.cpp  module.cpp  sample_format.cpp  type_utils.h
python/nvidia/nvimgcodec/tools/dicom/: convert_htj2k.py  dicom_utils.py  pydicom_plugin.py
resources/jpeg2k/ycc_rgb_conversion/: artificial_420_16b3c_int16.jp2  artificial_420_16b3c_uint16.jp2  artificial_420_8b3c_uint8.jp2  artificial_422_16b3c_int16.jp2  artificial_422_16b3c_uint16.jp2  artificial_422_8b3c_uint8.jp2  artificial_444_16b3c_int16.jp2  artificial_444_16b3c_uint16.jp2  artificial_444_8b3c_uint8.jp2
resources/pnm/corrupted/: int_overflow.pnm
resources/ref/jpeg2k/: cat-1046544_640-16bit.ppm
resources/ref/png/with_alpha_16bit/: 4ch16bpp.ppm
resources/ref/tiff/: cat-300572_640_fp32.pfm  cat-300572_640_uint16.ppm
resources/tiff/error/: width_or_height_is_0.tiff
src/: CMakeLists.txt  code_stream.cpp  code_stream.h  image_decoder.cpp  image_generic_codec.h  image_generic_decoder.cpp  image_generic_decoder.h  image_generic_encoder.cpp  image_generic_encoder.h  nvimgcodec_capi.cpp  plugin_framework.cpp  plugin_framework.h  thread_pool.cpp
src/imgproc/: CMakeLists.txt  copy_image.h  device_buffer.cpp  device_buffer.h  device_guard.h  exception.h  image_info_checks.h  out_of_bound_roi_fill.cpp  pageable_host_buffer.cpp  pageable_host_buffer.h  pinned_buffer.cpp  pinned_buffer.h  region_orientation.h  safe_arithmetic.h  stream_device.h  type_utils.h
src/parsers/: bmp.cpp  byte_io.h  jpeg.cpp  jpeg2k.cpp  jpeg2k.h  pnm.cpp  tiff.cpp  tiff.h  webp.cpp
test/: CMakeLists.txt  device_guard_test.cpp  plugin_framework_test.cpp  requirements_lnx_cu12.txt  requirements_lnx_cu13.txt  requirements_win_cu12.txt  requirements_win_cu13.txt  test.bat  test.sh  test_conda.sh  test_transcode.py  thread_pool_test.cpp
test/api/: bitstream_offset_test.cpp  can_decode_test.cpp  concurrent_decode_test.cpp  concurrent_encode_test.cpp  decode_batch_only_fallback_test.cpp
test/extensions/: common_ext_decoder_test.h  common_ext_encoder_test.h  libjpeg_turbo_ext_decoder_test.cpp  libtiff_ext_decoder_test.cpp  npy_test_utils.h  nvbmp_ext_decoder_test.cpp  nvbmp_ext_encoder_test.cpp  nvjpeg2k_ext_decoder_test.cpp  nvjpeg2k_ext_encoder_test.cpp  nvjpeg2k_ext_test_common.h  nvjpeg_ext_encoder_test.cpp  nvjpeg_ext_lossless_decoder_test.cpp  nvtiff_ext_decoder_test.cpp  nvtiff_ext_encoder_test.cpp  opencv_ext_decoder_test.cpp  opencv_ext_encoder_test.cpp  roi_orientation_integration_test.cpp
test/imgproc/: region_orientation_test.cc  safe_arithmetic_test.cc
test/parsers/: jpeg2k_test.cpp  jpeg_test.cpp  pnm_test.cpp  tiff_test.cpp
test/python/: conftest.py  test_bitstream_offset.py  test_code_stream.py  test_cpu_only.py  test_decode.py  test_decode_code_stream.py  test_decode_dtype.py  test_decode_free_threaded.py  test_decode_jpeg2k.py  test_decode_multi-image.py  test_decode_multichannel.py  test_decode_roi_fancy_upsampling.py  test_decode_roi_orientation.py  test_decode_sample_format.py  test_decode_tiff.py  test_encode.py  test_encode_code_stream.py  test_encode_decode.py  test_encode_dtype.py  test_hw_decoder_paths.py  test_image.py  test_metadata.py  test_multigpu.py  test_nvjpeg_utils.py  test_params.py  utils.py
test/python/integration/: test_dlpack_cupy.py
test/python/integration/dicom/: __init__.py  download_midi_b_data.py  midi_b_series_uids.txt  test_compress_midi_b_dataset.py  test_convert_htj2k.py  test_convert_multiframe.py  test_pydicom_plugin.py
test/scripts/: gen_jp2_16bit_subsampled.cpp
tools/stub_generator/: nvtiff.json  stub_codegen.py
